// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KAN-886 — AiSegmentsView regression snapshots > Sub-state 1: empty — 'No leads right now' + scan count 1`] = `
<main
  class="min-h-screen bg-background p-8"
>
  <header
    class="mb-8"
  >
    <h1
      class="text-h1 text-foreground"
    >
      Leads
    </h1>
    <p
      class="mt-1 text-muted-foreground"
    >
      growth scans your contacts for revenue patterns you haven't worked.
    </p>
  </header>
  <div
    class="rounded-[var(--ds-radius-card)] border bg-card text-card-foreground shadow-[var(--ds-shadow-card)] mx-auto max-w-4xl p-8 text-center"
  >
    <div
      class="mx-auto mb-4 flex h-12 w-12 items-center justify-center rounded-full bg-[var(--ds-surface-sunken)]"
    >
      <span
        class="text-xl text-muted-foreground"
      >
        ✓
      </span>
    </div>
    <h2
      class="text-h2 text-foreground"
    >
      No leads right now
    </h2>
    <p
      class="mx-auto mt-2 max-w-md text-muted-foreground"
    >
      We scanned 
      5
       contacts and didn't find any signals above threshold. New leads appear as contacts go dormant or arrive unworked.
    </p>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [background-image:var(--ds-accent-gradient)] text-primary-foreground shadow-[var(--ds-shadow-card)] hover:opacity-95 h-9 rounded-full px-4 mt-6"
    >
      Scan again
    </button>
  </div>
</main>
`;

exports[`KAN-886 — AiSegmentsView regression snapshots > Sub-state 2: found — header copy + opportunity card structure 1`] = `
<main
  class="min-h-screen bg-background p-8"
>
  <header
    class="mx-auto mb-8 max-w-4xl"
  >
    <div
      class="flex items-baseline justify-between"
    >
      <div>
        <h1
          class="text-h1 text-foreground"
        >
          Leads
        </h1>
        <p
          class="mt-1 text-muted-foreground"
        >
          growth found 
          1
           
          lead
           across
           
          12
           contacts.
        </p>
      </div>
      <button
        aria-label="Rescan leads"
        class="rounded-[var(--ds-radius-pill)] px-2 py-1 text-sm text-muted-foreground transition-colors hover:text-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2"
      >
        ↻ Rescan
      </button>
    </div>
  </header>
  <div
    class="mx-auto max-w-4xl space-y-6"
  >
    <article
      aria-label="Opportunity: Reactivate dormant leads"
      class="overflow-hidden rounded-[var(--ds-radius-card)] border border-border bg-card text-card-foreground shadow-[var(--ds-shadow-card)]"
      role="article"
    >
      <div
        class="border-b border-border p-6"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="flex-1"
          >
            <div
              class="rounded-full border px-2.5 py-0.5 text-xs transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[var(--ds-violet-100)] text-[var(--ds-violet-500)] font-medium mb-2 inline-flex items-center gap-2 uppercase tracking-wide"
            >
              <span
                aria-hidden="true"
                class="h-2 w-2 rounded-full bg-[var(--ds-violet-500)]"
              />
              AI-identified opportunity
            </div>
            <h2
              class="text-h2 text-foreground"
            >
              Reactivate dormant leads
            </h2>
            <p
              class="mt-2 text-muted-foreground"
            >
              7 contacts went 30+ days without engagement.
            </p>
          </div>
          <div
            class="shrink-0 text-right"
          >
            <div
              class="text-h1 tabular-nums text-foreground"
            >
              7
            </div>
            <div
              class="text-caption text-muted-foreground"
            >
              contacts
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-b border-border px-6 py-4"
      >
        <h3
          class="text-micro mb-3 uppercase tracking-wide text-muted-foreground"
        >
          Contacts in this segment
        </h3>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="flex h-8 w-8 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
              >
                SA
              </div>
              <span
                class="text-foreground"
              >
                Sample One
              </span>
              <span
                class="text-mono-sm text-muted-foreground"
              >
                s1@example.com
              </span>
            </div>
            <span
              class="text-caption text-muted-foreground"
            >
              lead
            </span>
          </li>
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="flex h-8 w-8 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
              >
                SA
              </div>
              <span
                class="text-foreground"
              >
                Sample Two
              </span>
              <span
                class="text-mono-sm text-muted-foreground"
              >
                s2@example.com
              </span>
            </div>
            <span
              class="text-caption text-muted-foreground"
            >
              mql
            </span>
          </li>
          <li
            class="text-caption pl-11 text-muted-foreground"
          >
            + 
            5
             more
          </li>
        </ul>
      </div>
      <div
        class="border-b border-border px-6 py-4"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="text-micro uppercase tracking-wide text-muted-foreground"
          >
            What growth will do
          </h3>
          <button
            aria-expanded="false"
            class="rounded px-1 text-xs text-muted-foreground transition-colors hover:text-foreground focus:outline-none focus:ring-2 focus:ring-ring"
          >
            ▼ Show reasoning
          </button>
        </div>
        <p
          class="mt-2 text-sm font-medium text-foreground"
        >
          Dormant Reactivation — 3-touch
        </p>
        <p
          class="text-caption mt-1 text-muted-foreground"
        >
          Email + SMS + Email over 5 days.
        </p>
        <ol
          class="mt-3 space-y-2"
        >
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="mt-0.5 flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
            >
              1
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-foreground"
              >
                Day 
                0
                : 
                ask open question
              </span>
              <span
                class="text-micro ml-2 uppercase tracking-wide text-muted-foreground"
              >
                email
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="mt-0.5 flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
            >
              2
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-foreground"
              >
                Day 
                2
                : 
                soft check in
              </span>
              <span
                class="text-micro ml-2 uppercase tracking-wide text-muted-foreground"
              >
                sms
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="mt-0.5 flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
            >
              3
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-foreground"
              >
                Day 
                5
                : 
                final value offer
              </span>
              <span
                class="text-micro ml-2 uppercase tracking-wide text-muted-foreground"
              >
                email
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-4 border-t border-border px-6 py-4"
      >
        <p
          class="text-caption text-muted-foreground"
        >
          Preview sends no real messages. Launch dispatches via your connected channels.
        </p>
        <div
          class="flex shrink-0 gap-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-border bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-full px-4"
          >
            Preview messages
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [background-image:var(--ds-accent-gradient)] text-primary-foreground shadow-[var(--ds-shadow-card)] hover:opacity-95 h-9 rounded-full px-4"
          >
            Launch for 7
          </button>
        </div>
      </div>
    </article>
  </div>
</main>
`;

exports[`KAN-886 — AiSegmentsView regression snapshots > Sub-state 3: launched — success banner appears after launch 1`] = `
<main
  class="min-h-screen bg-background p-8"
>
  <header
    class="mx-auto mb-8 max-w-4xl"
  >
    <div
      class="flex items-baseline justify-between"
    >
      <div>
        <h1
          class="text-h1 text-foreground"
        >
          Leads
        </h1>
        <p
          class="mt-1 text-muted-foreground"
        >
          growth found 
          1
           
          lead
           across
           
          12
           contacts.
        </p>
      </div>
      <button
        aria-label="Rescan leads"
        class="rounded-[var(--ds-radius-pill)] px-2 py-1 text-sm text-muted-foreground transition-colors hover:text-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2"
      >
        ↻ Rescan
      </button>
    </div>
  </header>
  <div
    aria-live="polite"
    class="mx-auto mb-6 max-w-4xl rounded-[var(--ds-radius-card)] border p-5"
    role="status"
    style="background-color: var(--ds-emerald-100); border-color: var(--ds-emerald-500);"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div>
        <div
          class="mb-1 flex items-center gap-2"
        >
          <span
            aria-hidden="true"
            class="h-2 w-2 rounded-full"
            style="background-color: var(--ds-emerald-500);"
          />
          <span
            class="text-micro uppercase tracking-wide"
            style="color: var(--ds-emerald-700);"
          >
            Launched
          </span>
        </div>
        <p
          class="font-medium"
          style="color: var(--ds-emerald-700);"
        >
          7 contacts enrolled — first message queued.
        </p>
        <p
          class="mt-1 text-sm"
          style="color: var(--ds-emerald-700);"
        >
          <a
            class="underline hover:opacity-80"
            href="/audit"
          >
            View decisions in audit log →
          </a>
        </p>
      </div>
      <button
        aria-label="Dismiss"
        class="text-lg leading-none transition-opacity hover:opacity-70"
        style="color: var(--ds-emerald-700);"
      >
        ×
      </button>
    </div>
  </div>
  <div
    class="mx-auto max-w-4xl space-y-6"
  >
    <article
      aria-label="Opportunity: Reactivate dormant leads"
      class="overflow-hidden rounded-[var(--ds-radius-card)] border border-border bg-card text-card-foreground shadow-[var(--ds-shadow-card)]"
      role="article"
    >
      <div
        class="border-b border-border p-6"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="flex-1"
          >
            <div
              class="rounded-full border px-2.5 py-0.5 text-xs transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[var(--ds-violet-100)] text-[var(--ds-violet-500)] font-medium mb-2 inline-flex items-center gap-2 uppercase tracking-wide"
            >
              <span
                aria-hidden="true"
                class="h-2 w-2 rounded-full bg-[var(--ds-violet-500)]"
              />
              AI-identified opportunity
            </div>
            <h2
              class="text-h2 text-foreground"
            >
              Reactivate dormant leads
            </h2>
            <p
              class="mt-2 text-muted-foreground"
            >
              7 contacts went 30+ days without engagement.
            </p>
          </div>
          <div
            class="shrink-0 text-right"
          >
            <div
              class="text-h1 tabular-nums text-foreground"
            >
              7
            </div>
            <div
              class="text-caption text-muted-foreground"
            >
              contacts
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-b border-border px-6 py-4"
      >
        <h3
          class="text-micro mb-3 uppercase tracking-wide text-muted-foreground"
        >
          Contacts in this segment
        </h3>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="flex h-8 w-8 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
              >
                SA
              </div>
              <span
                class="text-foreground"
              >
                Sample One
              </span>
              <span
                class="text-mono-sm text-muted-foreground"
              >
                s1@example.com
              </span>
            </div>
            <span
              class="text-caption text-muted-foreground"
            >
              lead
            </span>
          </li>
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="flex h-8 w-8 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
              >
                SA
              </div>
              <span
                class="text-foreground"
              >
                Sample Two
              </span>
              <span
                class="text-mono-sm text-muted-foreground"
              >
                s2@example.com
              </span>
            </div>
            <span
              class="text-caption text-muted-foreground"
            >
              mql
            </span>
          </li>
          <li
            class="text-caption pl-11 text-muted-foreground"
          >
            + 
            5
             more
          </li>
        </ul>
      </div>
      <div
        class="border-b border-border px-6 py-4"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="text-micro uppercase tracking-wide text-muted-foreground"
          >
            What growth will do
          </h3>
          <button
            aria-expanded="false"
            class="rounded px-1 text-xs text-muted-foreground transition-colors hover:text-foreground focus:outline-none focus:ring-2 focus:ring-ring"
          >
            ▼ Show reasoning
          </button>
        </div>
        <p
          class="mt-2 text-sm font-medium text-foreground"
        >
          Dormant Reactivation — 3-touch
        </p>
        <p
          class="text-caption mt-1 text-muted-foreground"
        >
          Email + SMS + Email over 5 days.
        </p>
        <ol
          class="mt-3 space-y-2"
        >
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="mt-0.5 flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
            >
              1
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-foreground"
              >
                Day 
                0
                : 
                ask open question
              </span>
              <span
                class="text-micro ml-2 uppercase tracking-wide text-muted-foreground"
              >
                email
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="mt-0.5 flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
            >
              2
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-foreground"
              >
                Day 
                2
                : 
                soft check in
              </span>
              <span
                class="text-micro ml-2 uppercase tracking-wide text-muted-foreground"
              >
                sms
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="mt-0.5 flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-[var(--ds-violet-100)] text-xs font-medium text-[var(--ds-violet-500)]"
            >
              3
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-foreground"
              >
                Day 
                5
                : 
                final value offer
              </span>
              <span
                class="text-micro ml-2 uppercase tracking-wide text-muted-foreground"
              >
                email
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-4 border-t border-border px-6 py-4"
      >
        <p
          class="text-caption text-muted-foreground"
        >
          Preview sends no real messages. Launch dispatches via your connected channels.
        </p>
        <div
          class="flex shrink-0 gap-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-border bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-full px-4"
          >
            Preview messages
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [background-image:var(--ds-accent-gradient)] text-primary-foreground shadow-[var(--ds-shadow-card)] hover:opacity-95 h-9 rounded-full px-4"
          >
            Launch for 7
          </button>
        </div>
      </div>
    </article>
  </div>
</main>
`;
